Update index.html : fixed a tag, created mail icon.

--- a/index.html
+++ b/index.html
@@ -165,16 +165,7 @@
 
 </head>
 <body class="cover" style="background-color: hsla(0,0%,99%,1);">
-  <!-- <nav id="social" class="social-icons"><ul id="menu-social-items" class="social-menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1734"><a href="https://www.facebook.com/colorlib" onclick="__gaTracker('send', 'event', 'outbound-widget', 'https://www.facebook.com/colorlib', 'Facebook');"><i class="social_icon fa"><span>Facebook</span></i></a></li>
-    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1735"><a href="http://twitter.com/colorlib" onclick="__gaTracker('send', 'event', 'outbound-widget', 'http://twitter.com/colorlib', 'Twitter');"><i class="social_icon fa"><span>Twitter</span></i></a></li>
-    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1736"><a href="https://www.youtube.com/channel/UCOaovjLNXdIch2vLFsw_uew" onclick="__gaTracker('send', 'event', 'outbound-widget', 'https://www.youtube.com/channel/UCOaovjLNXdIch2vLFsw_uew', 'youtube');"><i class="social_icon fa"><span>youtube</span></i></a></li>
-    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1737"><a href="https://plus.google.com/100289203607749737039" onclick="__gaTracker('send', 'event', 'outbound-widget', 'https://plus.google.com/100289203607749737039', 'Google+');"><i class="social_icon fa"><span>Google+</span></i></a></li>
-    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1738"><a href="http://instagram.com" onclick="__gaTracker('send', 'event', 'outbound-widget', 'http://instagram.com', 'Instagram');"><i class="social_icon fa"><span>Instagram</span></i></a></li>
-    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1739"><a href="https://github.com/puikinsh/" onclick="__gaTracker('send', 'event', 'outbound-widget', 'https://github.com/puikinsh/', 'Github');"><i class="social_icon fa"><span>Github</span></i></a></li>
-</ul></nav>
-  <i class="fa fa-github"></i> fa-camera-retro -->
-
-
+  
   <nav class="navbar navbar-fixed-top" style="background-color: #ffffff; border-color: #e7e7e7;">
       <div class="container">
         <div class="navbar-header">
@@ -227,7 +218,7 @@
           iOS 개발을 공부하는 canapio입니다.
         </p>
         <p class="descriptionme">
-          개인개발을 즐겨하며 <a href="https://github.com/canapio">Github</a>이나 <a href="http://blog.canapio.com">블로그</a>에서 저의 활동 내역을 확인할 수 있습니다. 개발에대한 자세한 내용은 아래 링크를 통해 확인할 수 있습니다
+          개인개발을 즐겨하며 <a target="_blank" href="https://github.com/canapio">Github</a>이나 <a target="_blank" href="http://blog.canapio.com">블로그</a>에서 저의 활동 내역을 확인할 수 있습니다. 더 자세한 포트폴리오 내용은 아래 링크를 통해 확인할 수 있습니다.
         </p>
       </div>
 
@@ -323,9 +314,10 @@
 <footer>
   <nav style="text-align: center;">
     <ul class="footerul" style="text-align: center; padding: 0px;">
-      <li><a href="https://github.com/canapio"><i class="fa fa-github"></i></a></li>
-      <li><a href="https://twitter.com/canapio"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="http://blog.canapio.com/"><i class="fa fa-globe"></i></a></li>
+      <li><a target="_blank" href="https://github.com/canapio"><i class="fa fa-github"></i></a></li>
+      <li><a target="_blank" href="https://twitter.com/canapio"><i class="fa fa-twitter"></i></a></li>
+      <li><a target="_blank" href="http://blog.canapio.com/"><i class="fa fa-globe"></i></a></li>
+      <li><a href="mailto:canapio.developer@gmail.com"><i class="fa fa-envelope"></i></a></li>
     </ul>
   </nav>
   <div class="copyright col-md-12">canapio.</div>
