Update index.html : update og image.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>canapio's portfolio</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
+  <meta property="og:image" content="img/coverwithtext.jpg" />
+  <meta property="og:site_name" content="canapio's portfolio"/>
+  <meta name="title" content="canapio's portfolio" />
+  <meta name="Description" content="Hi, I'm canapio iOS developer. This is my portfolio." />
+
+
+
+
+
+
 
   <script src="dist/js/jquery-2.2.1.min.js" type="text/javascript"></script>
 
@@ -165,7 +178,7 @@
 
 </head>
 <body class="cover" style="background-color: hsla(0,0%,99%,1);">
-  
+
   <nav class="navbar navbar-fixed-top" style="background-color: #ffffff; border-color: #e7e7e7;">
       <div class="container">
         <div class="navbar-header">
