Update index.html : create copyright.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <img id="coverimage" src="img/cover.jpg" alt="" style="width: 100%; height: auto;"/>
   </div>
-  <div style="margin-top: 60px">
+  <div style="margin-top: 40px">
 
   </div>
 
@@ -175,7 +175,7 @@
       <li><a href="mailto:canapio.developer@gmail.com"><i class="fa fa-envelope"></i></a></li>
     </ul>
   </nav>
-  <div class="copyright col-md-12">canapio.</div>
+  <div class="copyright col-md-12">Copyright 2016. canapio all rights reserved.</div>
 </footer>
 <script type="text/javascript">
   $(window).scroll(function() {
