--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
       </div>
 
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem koitem" href="#">
           <div class="title col-md-6 col-xs-5">한글 시계</div>
           <div class="description col-md-6 col-xs-7">Opened Project</div>
         </a>
       </div>
 
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem koitem" href="#">
           <div class="title col-md-6 col-xs-5">공지알림서비스</div>
           <div class="description col-md-6 col-xs-7">Term Project</div>
         </a>
