--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" style="color: #777;">Home</a>
+          <a class="navbar-brand" href="#" style="color: #777;">canapio</a>
         </div>
     </div>
   </nav>
@@ -95,7 +95,7 @@
       Others
       -->
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem" href="./Guitar-Kit/index.html">
           <div class="title col-md-6 col-xs-5">Guitar Kit+</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
