--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="../font-awesome-4.5.0/css/font-awesome.min.css">
 
     <style media="screen">
+
+      @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+      p {
+        font-family: 'Nanum Gothic', serif;
+      }
       .title {
         font-size: 88px;
         font-family: Arial, Helvetica, sans-serif;
@@ -37,31 +42,90 @@
       .appicon {
         text-align: center;
         margin-top: 120px;
+        padding-bottom: 100px;
       }
       .appicon img {
-        width: 220px;
+        width: 200px;
         height: auto;
       }
 
 
+      .bodydiv {
+
+      }
+
+
+      footer {
+        margin-top: 70px;
+        padding: 50px 0;
+        text-align: center;
+        background-color: #f2f2f2;
+      }
+
+      .footerul li {
+        display: inline;
+      }
+      .footerul a {
+        font-size: 18px;
+        margin: 0 15px;
+      }
+
+      a.footer_a_tag:link {
+        color: #513926;
+      }
+      a.footer_a_tag:visited {
+        color: #513926;
+      }
+      a.footer_a_tag:hover {
+        color: #7F593C;
+      }
+
+
+      .image_div {
+        margin-left: 25px; margin-right: 25px;
+      }
+      .storyboard_img {
+        width: 90%;
+        height: auto;
+        margin-bottom: 30px;
+      }
+
 
       @media screen and (max-width : 768px){
         .title {
-          margin-left: 40px;
+          margin-left: 25px;
+          margin-right: 25px;
           margin-top: 100px;
           margin-bottom: 40px;
-          font-size: 44px;
+          font-size: 62px;
         }
-
-
+        .description {
+          margin-top: -60px;
+          margin-left: 25px;
+          font-size: 14px;
+          font-family: Arial, Helvetica, sans-serif;
+          font-weight: bold;
+        }
         .appicon {
-          margin-top: 0px;
+          margin-top: 50px;
         }
         .appicon img {
           width: 100px;
           height: auto;
         }
+
+        .bodydiv {
+          padding-left: 25px;
+          padding-right: 25px;
+          padding-top: 50px;
+        }
+
+        .image_div {
+          margin-left: 0px;
+          margin-right: 0px;
+        }
       }
+
     </style>
 
   </head>
@@ -82,24 +146,192 @@
     </nav>
 
     <div class="row">
-      <div class="col-md-1 col-sm-0"></div>
-      <div class="col-md-10 col-sm-12">
+      <div class="col-lg-3 col-sm-2 col-xs-0"></div>
+      <div class="col-lg-6 col-sm-8 col-xs-12">
         <div class="row title">
           Guitar Kit+
         </div>
         <div class="row description">
           Personal Project - 기획, 디자인, 개발, 배포
         </div>
+        <div class="appicon">
+          <img src="../img/app_icon/GuitarKit+.png" alt="" />
+        </div>
+        <div class="bodydiv">
+          <h2>Overview</h2>
+          <p>
+            Guitar Kit+는 아이폰, 아이패드를 지원하는 iOS용 어플리케이션입니다.<br>
+            개발자가 한참 기타에 빠져있을때, 기타를 치는 사람들이 필요한 앱이 무엇일까 를 고민하다가 만들게된 앱입니다. 기타를 처음 하시는 분들을 위한 <b>트레이닝기능</b>, 모든 연습생에게 필수적인 <b>메트로놈기능</b>, 기타를 어느정도 하시는 분들을 위한 <b>코드검색 및 저장기능</b>이 준비되어 있습니다.
+          </p>
+
+          <h2>User Flow</h2>
+
+
+
+
+        </div>
       </div>
     </div>
-    <div class="appicon">
-      <img src="../img/app_icon/GuitarKit+.png" alt="" />
+    <div class="row image_div" style="margin-top: 34px;">
+      <div class="col-lg-1 col-sm-0 col-xs-0"></div>
+      <div class="col-lg-10 col-sm-12 col-xs-12">
+        <img src="../img/userflow/userflow_guitarkit@2x.png" alt="guitar kit's user flow" style="width: 100%; height: auto;"/>
+      </div>
+      <div class="col-lg-1 col-sm-0 col-xs-0"></div>
     </div>
+    <div class="row">
+      <div class="col-lg-3 col-sm-2 col-xs-0"></div>
+      <div class="col-lg-6 col-sm-8 col-xs-12">
+        <div class="bodydiv">
 
+
+
+
+
+
+          <h2>Story Board</h2>
+
+
+
+
+        </div>
+      </div>
+    </div>
+    <div class="row image_div" style="margin-top: 34px;">
+      <div class="col-lg-1 col-sm-0 col-xs-0"></div>
+      <div class="col-lg-10 col-sm-12 col-xs-12" style="text-align: center;">
+
+
+
+        <div class="row">
+          <div class="col-md-offset-0 col-md-4 col-sm-offset-4 col-sm-4 col-xs-offset-3 col-xs-6"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit000.jpg" alt="guitar kit's user flow" /></div>
+
+          <div class="col-md-offset-0 col-md-4 col-sm-offset-2 col-sm-4 col-xs-offset-3 col-xs-6"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit001.jpg" alt="guitar kit's user flow" /></div>
+          <div class="col-md-0 col-sm-0 col-xs-3"></div>
+          <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit002.jpg" alt="guitar kit's user flow" /></div>
+
+          <div class="col-md-offset-0 col-md-4 col-sm-offset-2 col-sm-4 col-xs-offset-3 col-xs-6"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit003.jpg" alt="guitar kit's user flow" /></div>
+          <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit004.jpg" alt="guitar kit's user flow" /></div>
+
+          <div class="col-md-offset-0 col-md-4 col-sm-offset-4 col-sm-4 col-xs-offset-3 col-xs-6"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit005.jpg" alt="guitar kit's user flow" /></div>
+        </div>
+      </div>
+      <div class="col-lg-1 col-sm-0 col-xs-0"></div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-sm-2 col-xs-0"></div>
+      <div class="col-lg-6 col-sm-8 col-xs-12">
+        <div class="bodydiv">
+
+
+
+
+
+
+
+
+
+
+          <link rel="stylesheet" href="../css/segment.css">
+          <script src="../js/segment.js"></script>
+          <div class="row">
+            <div class="col-md-2 col-sm-1 col-xs-0"></div>
+            <div class="col-md-8 col-sm-10 col-xs-12">
+              <select id="targetPeople" class="segment-select" onchange="changeSegmentValue()">
+                <option value="Everybody">Everybody</option>
+                <option value="Developer">Developer</option>
+              </select>
+            </div>
+          </div>
+
+
+          <script type="text/javascript">
+          $(document).ready(function() {
+            $(".segment-select").Segment()
+          })
+          function changeSegmentValue(spanobject) {
+            if ($("#targetPeople option:selected").val()=="Everybody") {
+              $("#everybody_div").show()
+              $("#developer_div").hide()
+            } else {
+              $("#developer_div").show()
+              $("#everybody_div").hide()
+            }
+          }
+          </script>
+
+          <!-- 개발자 외의 사람들을 위한 소개 글 -->
+          <div id="everybody_div">
+            <h2>Achievements</h2>
+            <p>
+              이 앱의 가장 큰 업적은 기획한대로 개발된 것입니다. 현실적으로 힘든 개발에서 타협하지않고 구현해내었습니다. 그래서 이렇게 높은 완성도가 나올 수 있었던 것이고 저는 그때당시 무슨 정신으로 이렇게 열심히 개발했었는지 잘 기억이 안납니다. 아마 개인개발이기에 가능했던 일이지 않을까 생각합니다.<br>
+              두번째 업적은 애플의 앱스토어 메인에 "금주의 앱"으로 뽑힌것입니다. 그때 다운로드수가 급격하게 증가하였습니다.
+            </p>
+
+            <h2>Research</h2>
+            <p>
+              개발자가 의도한 UI 흐름을 따르는가 에 대한 심도깊은 고민을 하였고, 그 결과물입니다. 유저를 어린아이라고 가정하고 자연스럽게 이야기를 시작한다는 느낌을 담았습니다. 어떻게 하면 재밌어할까, 어떻게하면 이 버튼에 관심을 가질까. 이런 고민들을 내내 했던것 같습니다.
+            </p></p>
+              앱을 출시한 뒤에 개인개발자로써 해볼 수 있는 홍보를 조사해보고 적용시켜보았습니다. 마케팅 비용을 최소한으로하여 최대의 효과를 얻고자 했습니다. 국내 최대 아이폰 컴ㅍ니티 사이트인 아사모(링크)를 위주로 홍보를 준비하였고, 생각보다 좋은 호응을 얻어내어 다운로드수와 수익에 직접적인 영향을 주었습니다.<br>
+              // 앱애니 스샷 및 아사모 홍보 링크
+            </p>
+
+            <h2>The End</h2>
+            <p>
+              이 앱은 개발자에게 있어서 가장 애착이 가는 앱으로 자리잡고 있습니다.
+            </p>
+          </div>
+
+          <!-- 개발자용 소개 글 -->
+          <div id="developer_div" style="display: none;">
+            <h2>Achievements</h2>
+            <p>
+              작성중...
+            </p>
+
+            <h2>Research</h2>
+            <p>
+              개발자가 처음 기획할 당시 생각했던 모습과 거의 동일하게 개발되었던 몇 안되는 프로젝트 중 하나입니다. 또한 앱의 특징은 화려한 UI 애니메이션인데, 그것이 가능했던 이유는 기본 UIKit이 아닌 Cocos2D라는 게임엔진을 이용하여 만들었기 때문입니다. 따라서 시중에 나와있는 앱들과는 조금 다른, 더좋은 퍼포먼스를 자랑합니다.
+            </p></p>
+              DB를 사용할 줄 모르는(DB라는 개념이 전혀 없는) 시기에 앱을 개발하였어서 수많은 기타 코드를 텍스트 파일에 저장하였습니다. 이러한 삽질이 나중에 DB를 처음 접했을때 숨통이 트이게 해주는 시너지 효과를 주기도 했습니다. 텍스트파일에 스키마를 만들고 저장하며, 사용할 때는 메인메모리에 올리고 스키마대로 잘라내어 객체들을 생성합니다. 화려한 UI애니메이션 도중에 텍스트를 불러오므로 데이터를 불러오는것 같지 않는 느낌을 유저에게 선사합니다.
+            </p>
+
+            <h2>Extern Frameworks &#38; Libraries</h2>
+            <p>
+              <ul>
+                <li><a href="http://www.cocos2d-iphone.org/">Cocos2D-iPhone</a></li>
+                <li><a href="https://www.google.com/analytics/">Google Analytics</a></li>
+                <li><a href="https://github.com/jdg/MBProgressHUD">MBProgressHUD</a></li>
+              </ul>
+            </p>
+
+            <!-- <h2>The End</h2>
+            <p>
+
+            </p> -->
+          </div>
+
+
+        </div>
+
+      </div>
+    </div>
 
 
 
   </body>
+
+  <footer>
+    <nav style="text-align: center;">
+      <ul class="footerul" style="text-align: center; padding: 0px;">
+        <li><a class="footer_a_tag" target="_blank" href="https://github.com/canapio"><i class="fa fa-github"></i></a></li>
+        <li><a class="footer_a_tag" target="_blank" href="https://twitter.com/canapio"><i class="fa fa-twitter"></i></a></li>
+        <li><a class="footer_a_tag" target="_blank" href="http://blog.canapio.com/"><i class="fa fa-globe"></i></a></li>
+        <li><a class="footer_a_tag" href="mailto:canapio.developer@gmail.com"><i class="fa fa-envelope"></i></a></li>
+      </ul>
+    </nav>
+    <div class="copyright col-md-12">Copyright 2016. canapio all rights reserved.</div>
+  </footer>
 
   <script type="text/javascript">
     // $("#downarrow")
