--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -87,7 +87,7 @@
       .storyboard_img {
         width: 90%;
         height: auto;
-        margin-bottom: 30px;
+        margin-bottom: 48px;
       }
 
 
@@ -213,7 +213,7 @@
           <div class="col-md-offset-0 col-md-4 col-sm-offset-2 col-sm-4 col-xs-offset-0 col-xs-12"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit003.jpg" alt="guitar kit's user flow" /></div>
           <div class="col-md-offset-0 col-md-4 col-sm-offset-0 col-sm-4 col-xs-offset-0 col-xs-12"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit004.jpg" alt="guitar kit's user flow" /></div>
 
-          <div class="col-md-offset-0 col-md-4 col-sm-offset-4 col-sm-4 col-xs-offset-0 col-xs-12"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit005.jpg" alt="guitar kit's user flow" /></div>
+          <div class="col-md-offset-0 col-md-4 col-sm-offset-4 col-sm-4 col-xs-offset-0 col-xs-12"><a href="../img/storyboard/storyboard_guitarkit005.jpg"><img class="storyboard_img" src="../img/storyboard/storyboard_guitarkit005.jpg" alt="guitar kit's user flow" /></a></div>
         </div>
       </div>
       <div class="col-lg-1 col-sm-0 col-xs-0"></div>
@@ -251,17 +251,17 @@
           })
           function changeSegmentValue(spanobject) {
             if ($("#targetPeople option:selected").val()=="Everybody") {
-              $("#everybody_div").show()
-              $("#developer_div").hide()
+              $(".everybody_div").show()
+              $(".developer_div").hide()
             } else {
-              $("#developer_div").show()
-              $("#everybody_div").hide()
+              $(".developer_div").show()
+              $(".everybody_div").hide()
             }
           }
           </script>
 
           <!-- 개발자 외의 사람들을 위한 소개 글 -->
-          <div id="everybody_div">
+          <div class="everybody_div">
             <h2>Achievements</h2>
             <p>
               이 앱의 가장 큰 업적은 기획한대로 개발된 것입니다. 현실적으로 힘든 개발에서 타협하지않고 구현해내었습니다. 그래서 이렇게 높은 완성도가 나올 수 있었던 것이고 저는 그때당시 무슨 정신으로 이렇게 열심히 개발했었는지 잘 기억이 안납니다. 아마 개인개발이기에 가능했던 일이지 않을까 생각합니다.<br>
@@ -272,9 +272,55 @@
             <p>
               개발자가 의도한 UI 흐름을 따르는가 에 대한 심도깊은 고민을 하였고, 그 결과물입니다. 유저를 어린아이라고 가정하고 자연스럽게 이야기를 시작한다는 느낌을 담았습니다. 어떻게 하면 재밌어할까, 어떻게하면 이 버튼에 관심을 가질까. 이런 고민들을 내내 했던것 같습니다.
             </p></p>
-              앱을 출시한 뒤에 개인개발자로써 해볼 수 있는 홍보를 조사해보고 적용시켜보았습니다. 마케팅 비용을 최소한으로하여 최대의 효과를 얻고자 했습니다. 국내 최대 아이폰 컴ㅍ니티 사이트인 아사모(링크)를 위주로 홍보를 준비하였고, 생각보다 좋은 호응을 얻어내어 다운로드수와 수익에 직접적인 영향을 주었습니다.<br>
-              // 앱애니 스샷 및 아사모 홍보 링크
+              앱을 출시한 뒤에 개인개발자로써 해볼 수 있는 홍보를 조사해보고 적용시켜보았습니다. 마케팅 비용을 최소한으로하여 최대의 효과를 얻고자 했습니다. 국내 최대 아이폰 컴ㅍ니티 사이트인 아사모(링크)를 위주로 홍보를 준비하였고, 생각보다 좋은 호응을 얻어내어 다운로드수와 수익에 직접적인 영향을 주었습니다.
             </p>
+            <p>
+              <ul>
+                <li>2014년 1월 11일 - <a href="http://cafe.naver.com/appleiphone/2391790">1.0버전 출시 홍보</a></li>
+                <li>2014년 2월 13일 - <a href="http://ipodart.net/2341">ipodart 앱 리뷰</a></li>
+                <li>2014년 5월 13일 - <a href="http://cafe.naver.com/appleiphone/2530960">2.0버전 출시 홍보</a></li>
+                <li>2014년 11월 22일 - <a href="http://cafe.naver.com/appleiphone/2841435">선착순 5000명 무료 이벤트</a></li>
+                <li>2014년 11월 22일 - <a href="http://appsaga.com/guitar-kit/">해외 앱 리뷰</a></li>
+                <li><a href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/reviews/?account_id=261008&date=2014-01-11~2016-02-11">유저 리뷰</a>(전체평점:3.9)</li>
+              </ul>
+            </p>
+
+
+            <!-- start image -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- start image -->
+
+    <div class="everybody_div">
+      <div class="row" style="text-align: center;">
+        <div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
+          <img src="../img/achievement/Achievements_guitarkit000.png" alt="" style="width: 100%; height: auto;"/>
+        </div>
+      </div>
+      <div class="row" style="text-align: center; font-size: 12px; opacity: 0.6; padding-top: 10px; padding-bottom: 10px;">
+        자료출처 : <a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/rank-history/?account_id=261008#vtype=day&countries=KR&start=2014-01-09&end=2016-03-07&device=iphone&view=rank&lm=3">App Annie</a><br>Guitar Kit+의 한국 앱스토어 순위 그래프<br>(파랑:음악카테고리, 빨강:전체)
+      </div>
+      <div class="row" style="text-align: center;">
+        <div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
+          <img src="../img/achievement/Achievements_guitarkit001.png" alt="" style="width: 100%; height: auto;"/>
+        </div>
+      </div>
+      <div class="row" style="text-align: center; font-size: 12px; opacity: 0.6; padding-top: 10px; padding-bottom: 10px;">
+        자료출처 : <a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/rank-history/?account_id=261008#vtype=hour&countries=KR&start=2014-06-29&end=2014-07-12&device=iphone&view=rank&lm=3">App Annie</a><br>Guitar Kit+의 한국 앱스토어 2014년 6월 29일~7월 13일 기간의 순위 그래프<br>(파랑:음악카테고리, 빨강:전체)
+      </div>
+    </div>
+
+
+    <!-- end image -->
+    <div class="row">
+      <div class="col-lg-3 col-sm-2 col-xs-0"></div>
+      <div class="col-lg-6 col-sm-8 col-xs-12">
+        <div class="bodydiv">
+          <div class="everybody_div">
+            <!-- end image -->
+
 
             <h2>The End</h2>
             <p>
@@ -283,7 +329,7 @@
           </div>
 
           <!-- 개발자용 소개 글 -->
-          <div id="developer_div" style="display: none;">
+          <div class="developer_div" style="display: none;">
             <h2>Achievements</h2>
             <p>
               작성중...
