--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       Others
       -->
       <div class="row item">
-        <a class="aitem" href="./Guitar-Kit/index.html">
+        <a class="aitem" href="./Guitar-Kit">
           <div class="title col-md-6 col-xs-5">Guitar Kit+</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
