--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
+    <meta name="title" content="canapio's portfolio :: Guitar Kit+ for iOS" />
+
+
+
     <script src="../dist/js/jquery-2.2.1.min.js" type="text/javascript"></script>
 
     <!-- Latest compiled and minified CSS -->
@@ -19,6 +23,39 @@
     <link rel="stylesheet" href="../font-awesome-4.5.0/css/font-awesome.min.css">
 
     <style media="screen">
+      div.prize {
+
+      }
+      div.prize ul {
+        opacity: 0.6;
+        list-style-type: none;
+        padding-top: 10px;
+        padding-right: 10px;
+      }
+      div.prize ul li {
+        padding-top: 8px;
+        padding-right: 10px;
+      }
+      div.prize ul img {
+        vertical-align: middle;
+      }
+      div.prize ul div {
+        font-weight: bolder;
+        width: 160px;
+        display:inline-block;
+        text-align: center;
+        vertical-align: middle;
+      }
+
+      div.prize_big {
+        position: absolute;
+        margin-top: 50px;
+        text-align: right;
+        width: 100%;
+      }
+      div.prize_small {
+        display: none;
+      }
 
       @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
       p {
@@ -90,8 +127,45 @@
         margin-bottom: 48px;
       }
 
+      @media screen and (max-width : 992px){
+        div.prize_big {
+          /*display: none;*/
+          margin-top: 320px;
+        }
+        div.prize ul li {
+          padding-top: 0px;
+          padding-right: 0px;
+        }
+        div.prize ul img {
+          transform: scale(0.7);
+        }
+        div.prize ul div {
+          font-weight: bolder;
+          font-size: 12px;
+          width: 120px;
+        }
+      }
 
       @media screen and (max-width : 768px){
+        div.prize_big {
+          display: none;
+        }
+        div.prize {
+
+        }
+        div.prize_small {
+          display:block;
+          text-align: center;
+        }
+        div.prize ul {
+          padding: 0px;
+          padding-top: 40px;
+        }
+        div.prize ul li {
+          padding-top: 0px;
+          padding-right: 0px;
+        }
+
         .title {
           margin-left: 25px;
           margin-right: 25px;
@@ -108,6 +182,7 @@
         }
         .appicon {
           margin-top: 50px;
+          padding-bottom: 10px;
         }
         .appicon img {
           width: 100px;
@@ -117,13 +192,14 @@
         .bodydiv {
           padding-left: 25px;
           padding-right: 25px;
-          padding-top: 50px;
+          padding-top: 0px;
         }
 
         .image_div {
           margin-left: 0px;
           margin-right: 0px;
         }
+
       }
 
     </style>
@@ -145,6 +221,41 @@
       </div>
     </nav>
 
+    <div class="prize prize_big">
+      <ul>
+        <li>
+          <img src="../img/prize_left.png" alt="prize_left" />
+          <div>한국 유료구문<br>음악 카테고리 1위 기록</div>
+          <img src="../img/prize_right.png" alt="prize_left" />
+        </li>
+        <li>
+          <img src="../img/prize_left.png" alt="prize_left" />
+          <div>한국 무료구문<br>음악 카테고리 1위 기록</div>
+          <img src="../img/prize_right.png" alt="prize_left" />
+        </li>
+        <li>
+          <img src="../img/prize_left.png" alt="prize_left" />
+          <div>"금주 베스트" 앱 선정</div>
+          <img src="../img/prize_right.png" alt="prize_left" />
+        </li>
+        <li>
+          <img src="../img/prize_left.png" alt="prize_left" />
+          <div>"새해, 새로운 당신" 앱 선정</div>
+          <img src="../img/prize_right.png" alt="prize_left" />
+        </li>
+        <li>
+          <img src="../img/prize_left.png" alt="prize_left" />
+          <div>"베스트 음악 App" 앱 선정</div>
+          <img src="../img/prize_right.png" alt="prize_left" />
+        </li>
+        <li>
+          <img src="../img/prize_left.png" alt="prize_left" />
+          <div>"비 오는 날" 앱 선정</div>
+          <img src="../img/prize_right.png" alt="prize_left" />
+        </li>
+      </ul>
+    </div>
+
     <div class="row">
       <div class="col-lg-3 col-sm-2 col-xs-0"></div>
       <div class="col-lg-6 col-sm-8 col-xs-12">
@@ -157,6 +268,42 @@
         <div class="appicon">
           <img src="../img/app_icon/GuitarKit+.png" alt="" />
         </div>
+
+        <div class="prize prize_small">
+          <ul>
+            <li>
+              <img src="../img/prize_left.png" alt="prize_left" />
+              <div>한국 유료구문<br>음악 카테고리 1위 기록</div>
+              <img src="../img/prize_right.png" alt="prize_left" />
+            </li>
+            <li>
+              <img src="../img/prize_left.png" alt="prize_left" />
+              <div>한국 무료구문<br>음악 카테고리 1위 기록</div>
+              <img src="../img/prize_right.png" alt="prize_left" />
+            </li>
+            <li>
+              <img src="../img/prize_left.png" alt="prize_left" />
+              <div>"금주 베스트" 앱 선정</div>
+              <img src="../img/prize_right.png" alt="prize_left" />
+            </li>
+            <li>
+              <img src="../img/prize_left.png" alt="prize_left" />
+              <div>"새해, 새로운 당신" 앱 선정</div>
+              <img src="../img/prize_right.png" alt="prize_left" />
+            </li>
+            <li>
+              <img src="../img/prize_left.png" alt="prize_left" />
+              <div>"베스트 음악 App" 앱 선정</div>
+              <img src="../img/prize_right.png" alt="prize_left" />
+            </li>
+            <li>
+              <img src="../img/prize_left.png" alt="prize_left" />
+              <div>"비 오는 날" 앱 선정</div>
+              <img src="../img/prize_right.png" alt="prize_left" />
+            </li>
+          </ul>
+        </div>
+
         <div class="bodydiv">
           <h2>Overview</h2>
           <p>
