--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -266,7 +266,7 @@
           Personal Project - 기획, 디자인, 개발, 배포
         </div>
         <div class="appicon">
-          <img src="../img/app_icon/GuitarKit+.png" alt="" />
+          <a href="https://itunes.apple.com/app/id791551793"><img src="../img/app_icon/GuitarKit+.png" alt="" /></a>
         </div>
 
         <div class="prize prize_small">
@@ -307,8 +307,13 @@
         <div class="bodydiv">
           <h2>Overview</h2>
           <p>
-            Guitar Kit+는 아이폰, 아이패드를 지원하는 iOS용 어플리케이션입니다.<br>
-            개발자가 한참 기타에 빠져있을때, 기타를 치는 사람들이 필요한 앱이 무엇일까 를 고민하다가 만들게된 앱입니다. 기타를 처음 하시는 분들을 위한 <b>트레이닝기능</b>, 모든 연습생에게 필수적인 <b>메트로놈기능</b>, 기타를 어느정도 하시는 분들을 위한 <b>코드검색 및 저장기능</b>이 준비되어 있습니다.
+            Guitar Kit+는 아이폰, 아이패드를 지원하는 iOS용 어플리케이션입니다.
+          </p>
+          <p>
+            기타를 처음 하시는 분들을 위한 <b>트레이닝기능</b>, 모든 연습생에게 필수적인 <b>메트로놈기능</b>, 기타를 어느정도 하시는 분들을 위한 <b>코드검색 및 저장기능</b>이 준비되어 있습니다.
+          </p>
+          <p>
+            지금 바로 <b><a href="https://itunes.apple.com/app/id791551793">App Store</a></b>에서 다운로드 받으실 수 있습니다.
           </p>
 
           <h2>User Flow</h2>
@@ -322,7 +327,7 @@
     <div class="row image_div" style="margin-top: 34px;">
       <div class="col-lg-1 col-sm-0 col-xs-0"></div>
       <div class="col-lg-10 col-sm-12 col-xs-12">
-        <img src="../img/userflow/userflow_guitarkit@2x.png" alt="guitar kit's user flow" style="width: 100%; height: auto;"/>
+        <a href="../img/userflow/userflow_guitarkit@2x.png"><img src="../img/userflow/userflow_guitarkit@2x.png" alt="guitar kit's user flow" style="width: 100%; height: auto;"/></a>
       </div>
       <div class="col-lg-1 col-sm-0 col-xs-0"></div>
     </div>
@@ -444,8 +449,21 @@
           <div class="everybody_div">
             <h2>Achievements</h2>
             <p>
-              이 앱의 가장 큰 업적은 기획한대로 개발된 것입니다. 현실적으로 힘든 개발에서 타협하지않고 구현해내었습니다. 그래서 이렇게 높은 완성도가 나올 수 있었던 것이고 저는 그때당시 무슨 정신으로 이렇게 열심히 개발했었는지 잘 기억이 안납니다. 아마 개인개발이기에 가능했던 일이지 않을까 생각합니다.<br>
-              두번째 업적은 애플의 앱스토어 메인에 "금주의 앱"으로 뽑힌것입니다. 그때 다운로드수가 급격하게 증가하였습니다.
+              <ol>
+                <li><b>높은 완성도</b></li>
+                <li><b>애플 에디터로부터 "금주의 앱"에 선정됨</b></li>
+                <li><b>유저들과의 소통</b>
+                  <ul>
+                    <li>2014년 1월 11일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2391790">1.0버전 출시 홍보</a></li>
+                    <li>2014년 2월 13일 - <a target="_blank" href="http://ipodart.net/2341">ipodart 앱 리뷰</a></li>
+                    <li>2014년 5월 13일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2530960">2.0버전 출시 홍보</a></li>
+                    <li>2014년 11월 22일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2841435">선착순 5000명 무료 이벤트</a></li>
+                    <li>2014년 11월 22일 - <a target="_blank" href="http://appsaga.com/guitar-kit/">해외 앱 리뷰</a></li>
+                    <li><a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/reviews/?account_id=261008&date=2014-01-11~2016-02-11">유저 리뷰</a>(전체평점:3.9)</li>
+                  </ul>
+                </li>
+              </ol>
+
             </p>
 
             <h2>Research</h2>
@@ -455,14 +473,7 @@
               앱을 출시한 뒤에 개인개발자로써 해볼 수 있는 홍보를 조사해보고 적용시켜보았습니다. 마케팅 비용을 최소한으로하여 최대의 효과를 얻고자 했습니다. 국내 최대 아이폰 컴ㅍ니티 사이트인 아사모(링크)를 위주로 홍보를 준비하였고, 생각보다 좋은 호응을 얻어내어 다운로드수와 수익에 직접적인 영향을 주었습니다.
             </p>
             <p>
-              <ul>
-                <li>2014년 1월 11일 - <a href="http://cafe.naver.com/appleiphone/2391790">1.0버전 출시 홍보</a></li>
-                <li>2014년 2월 13일 - <a href="http://ipodart.net/2341">ipodart 앱 리뷰</a></li>
-                <li>2014년 5월 13일 - <a href="http://cafe.naver.com/appleiphone/2530960">2.0버전 출시 홍보</a></li>
-                <li>2014년 11월 22일 - <a href="http://cafe.naver.com/appleiphone/2841435">선착순 5000명 무료 이벤트</a></li>
-                <li>2014년 11월 22일 - <a href="http://appsaga.com/guitar-kit/">해외 앱 리뷰</a></li>
-                <li><a href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/reviews/?account_id=261008&date=2014-01-11~2016-02-11">유저 리뷰</a>(전체평점:3.9)</li>
-              </ul>
+
             </p>
 
 
@@ -476,19 +487,19 @@
     <div class="everybody_div">
       <div class="row" style="text-align: center;">
         <div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
-          <img src="../img/achievement/Achievements_guitarkit000.png" alt="" style="width: 100%; height: auto;"/>
+          <a href="../img/achievement/Achievements_guitarkit000.png"><img src="../img/achievement/Achievements_guitarkit000.png" alt="" style="width: 100%; height: auto;"/></a>
         </div>
       </div>
       <div class="row" style="text-align: center; font-size: 12px; opacity: 0.6; padding-top: 10px; padding-bottom: 10px;">
-        자료출처 : <a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/rank-history/?account_id=261008#vtype=day&countries=KR&start=2014-01-09&end=2016-03-07&device=iphone&view=rank&lm=3">App Annie</a><br>Guitar Kit+의 한국 앱스토어 순위 그래프<br>(파랑:음악카테고리, 빨강:전체)
+        Guitar Kit+의 한국 앱스토어 순위 그래프<br>(파랑:음악카테고리, 빨강:전체)<br>자료출처 : <a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/rank-history/?account_id=261008#vtype=day&countries=KR&start=2014-01-09&end=2016-03-07&device=iphone&view=rank&lm=3">App Annie</a>
       </div>
       <div class="row" style="text-align: center;">
         <div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
-          <img src="../img/achievement/Achievements_guitarkit001.png" alt="" style="width: 100%; height: auto;"/>
+          <a href="../img/achievement/Achievements_guitarkit001.png"><img src="../img/achievement/Achievements_guitarkit001.png" alt="" style="width: 100%; height: auto;"/></a>
         </div>
       </div>
       <div class="row" style="text-align: center; font-size: 12px; opacity: 0.6; padding-top: 10px; padding-bottom: 10px;">
-        자료출처 : <a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/rank-history/?account_id=261008#vtype=hour&countries=KR&start=2014-06-29&end=2014-07-12&device=iphone&view=rank&lm=3">App Annie</a><br>Guitar Kit+의 한국 앱스토어 2014년 6월 29일~7월 13일 기간의 순위 그래프<br>(파랑:음악카테고리, 빨강:전체)
+        Guitar Kit+의 한국 앱스토어 2014년 6월 29일~7월 13일 기간의 순위 그래프<br>(파랑:음악카테고리, 빨강:전체)<br>자료출처 : <a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/rank-history/?account_id=261008#vtype=hour&countries=KR&start=2014-06-29&end=2014-07-12&device=iphone&view=rank&lm=3">App Annie</a>
       </div>
     </div>
 
@@ -512,7 +523,7 @@
           <div class="developer_div" style="display: none;">
             <h2>Achievements</h2>
             <p>
-              작성중...
+              현재 완성된 앱의 느낌이 만들기 위해 다양한 디자인 자료를 조사하였습니다. 개발을 하다보면 시간적으로 구현 불가능한 것들을 빼내야하기때문에, 처음 자료조사 할 때 가능한 방대하게 조사하는 것이 핵심이었습니다. 디자인을 정하는 단계부터 개발 설계가 들어갔고, 이 작업은 저를 미치게 만들기도 했지만 완성도 높은 결과물을 만드는데 큰 도움을 주었습니다.
             </p>
 
             <h2>Research</h2>
@@ -537,10 +548,14 @@
             </p> -->
           </div>
 
+          <div>
 
+          </div>
         </div>
 
       </div>
+
+
     </div>
 
 
