Update guitar-kit/index.html : preview image2

--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -7,7 +7,7 @@
 
 
     <meta name="title" content="canapio's portfolio :: Guitar Kit+ for iOS" />
-    <meta property="og:image" content="../img/preview/preview_guitar-kit.png" />
+    <meta property="og:image" content="../img/preview/preview_guitar-kit.jpg" />
 
 
     <script src="../dist/js/jquery-2.2.1.min.js" type="text/javascript"></script>
