--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -5,9 +5,10 @@
   	<title>canapio's portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-    <meta name="title" content="canapio's portfolio :: Guitar Kit+ for iOS" />
     <meta property="og:image" content="../img/preview/preview_guitar-kit.jpg" />
+    <meta property="og:site_name" content="canapio's portfolio :: Guitar Kit+ for iOS"/>
+    <meta name="title" content="canapio's portfolio :: Guitar Kit+ for iOS" />
+
 
 
     <script src="../dist/js/jquery-2.2.1.min.js" type="text/javascript"></script>
