--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -23,6 +23,9 @@
 
     <link rel="stylesheet" href="../font-awesome-4.5.0/css/font-awesome.min.css">
 
+
+
+
     <style media="screen">
       div.prize {
 
@@ -268,6 +271,17 @@
         </div>
         <div class="appicon">
           <a href="https://itunes.apple.com/app/id791551793"><img src="../img/app_icon/GuitarKit+.png" alt="" /></a>
+        </div>
+        <div>
+          <div id="fb-root"></div>
+          <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.5&appId=454316361340934";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));</script>
+          <div class="fb-like" data-href="https://www.facebook.com/GuitarChordPlus" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
         </div>
 
         <div class="prize prize_small">
