Update guitar-kit/index.html : facebook like button test 2

--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -83,7 +83,6 @@
       .appicon {
         text-align: center;
         margin-top: 120px;
-        padding-bottom: 100px;
       }
       .appicon img {
         width: 200px;
@@ -92,7 +91,7 @@
 
 
       .bodydiv {
-
+        padding-top: 100px;
       }
 
 
@@ -196,7 +195,7 @@
         .bodydiv {
           padding-left: 25px;
           padding-right: 25px;
-          padding-top: 0px;
+          padding-top: 100px;
         }
 
         .image_div {
@@ -272,7 +271,7 @@
         <div class="appicon">
           <a href="https://itunes.apple.com/app/id791551793"><img src="../img/app_icon/GuitarKit+.png" alt="" /></a>
         </div>
-        <div>
+        <div style="text-align: center">
           <div id="fb-root"></div>
           <script>(function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
