--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -268,10 +268,7 @@
         <div class="row description">
           Personal Project - 기획, 디자인, 개발, 배포
         </div>
-        <div class="appicon">
-          <a href="https://itunes.apple.com/app/id791551793"><img src="../img/app_icon/GuitarKit+.png" alt="" /></a>
-        </div>
-        <div style="text-align: center">
+        <div style="text-align: left">
           <div id="fb-root"></div>
           <script>(function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -282,6 +279,11 @@
           }(document, 'script', 'facebook-jssdk'));</script>
           <div class="fb-like" data-href="https://www.facebook.com/GuitarChordPlus" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
         </div>
+
+        <div class="appicon">
+          <a href="https://itunes.apple.com/app/id791551793"><img src="../img/app_icon/GuitarKit+.png" alt="" /></a>
+        </div>
+
 
         <div class="prize prize_small">
           <ul>
