Update guitar-kit/index.html : fixed layout bug

--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -83,6 +83,7 @@
       .appicon {
         text-align: center;
         margin-top: 120px;
+        margin-bottom: 100px;
       }
       .appicon img {
         width: 200px;
@@ -91,7 +92,7 @@
 
 
       .bodydiv {
-        padding-top: 100px;
+        /*padding-top: 100px;*/
       }
 
 
@@ -185,7 +186,7 @@
         }
         .appicon {
           margin-top: 50px;
-          padding-bottom: 10px;
+          margin-bottom: 10px;
         }
         .appicon img {
           width: 100px;
@@ -195,7 +196,7 @@
         .bodydiv {
           padding-left: 25px;
           padding-right: 25px;
-          padding-top: 100px;
+          /*padding-top: 100px;*/
         }
 
         .image_div {
