Update guitar-kit/index.html : version history 2

--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -334,7 +334,9 @@
           <h2>Version History</h2>
           <p>
             <b>v2.21 (15.10.03)</b>
-            - iOS9 지원
+            <ul>
+              <li>iOS9 지원</li>
+            </ul>
           </p><p>
             <b>v2.20 (15.08.13)</b>
             <ul>
